--- a/backend/package.json
+++ b/backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "build": "tsc",
     "start": "node dist/server.js",
-    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/server.ts",
-    "lint": "eslint 'src/**/*.ts'"
+    "dev": "nodemon --watch \"**/*.ts\" --exec \"npx ts-node\" server.ts",
+    "lint": "eslint '**/*.ts'"
   },
   "keywords": [],
   "author": "",
