--- a/backend/package.json
+++ b/backend/package.json
@@ -17,10 +17,13 @@
     "@supabase/supabase-js": "^2.49.4",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "formidable": "^3.5.4",
+    "socket.io": "^4.8.1",
     "supabase": "^2.22.12"
   },
   "devDependencies": {
     "@types/express": "^5.0.2",
+    "@types/formidable": "^3.4.5",
     "@types/node": "^22.15.18",
     "eslint": "^9.27.0",
     "nodemon": "^3.1.10",
