--- a/backend/package.json
+++ b/backend/package.json
@@ -15,6 +15,7 @@
   "packageManager": "pnpm@10.11.0",
   "dependencies": {
     "@supabase/supabase-js": "^2.49.4",
+    "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "formidable": "^3.5.4",
@@ -22,6 +23,7 @@
     "supabase": "^2.22.12"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^22.15.18",
