--- a/backend/package.json
+++ b/backend/package.json
@@ -20,13 +20,17 @@
     "express": "^5.1.0",
     "formidable": "^3.5.4",
     "socket.io": "^4.8.1",
-    "supabase": "^2.22.12"
+    "supabase": "^2.22.12",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/formidable": "^3.4.5",
     "@types/node": "^22.15.18",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8",
     "eslint": "^9.27.0",
     "nodemon": "^3.1.10",
     "prettier": "^3.5.3",
