--- a/backend/package.json
+++ b/backend/package.json
@@ -28,6 +28,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/formidable": "^3.4.5",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
