--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "formidable": "^3.5.4",
+    "mime-types": "^3.0.1",
     "socket.io": "^4.8.1",
     "supabase": "^2.22.12",
     "swagger-jsdoc": "^6.2.8",
@@ -28,6 +29,7 @@
     "@types/cors": "^2.8.18",
     "@types/express": "^5.0.2",
     "@types/formidable": "^3.4.5",
+    "@types/mime-types": "^2.1.4",
     "@types/multer": "^1.4.12",
     "@types/node": "^22.15.18",
     "@types/swagger-jsdoc": "^6.0.4",
